--- a/app/views/layouts/_posting_block.html.erb
+++ b/app/views/layouts/_posting_block.html.erb
@@ -1,32 +1,32 @@
 <div class="card col-xl-12 col-lg-12 col-md-12">
-          <div class="card-header">Create Post</div>
-          <div class="card-body">
-            <form class="col-xl-12">
-              <div class="form-row col-xl-12">
-                <div class="form-group col-xl-3">
-                  <div class="user-circle"></div>
-                </div>
-                <div class="form-group col-xl-9">
-                  <textarea
-                    class="form-control"
-                    id="exampleFormControlTextarea1"
-                    rows="3"
-                  ></textarea>
-                </div>
-              </div>
-            </form>
-          </div>
-          <div class="card-footer">
-            <button type="button" class="btn btn-light">
-              <i class="fa fa-picture-o" aria-hidden="true"></i> Photo / Video
-            </button>
-            <button type="button" class="btn btn-light">
-              <i class="fa fa-users" aria-hidden="true"></i>
-              Tag a Friend
-            </button>
-            <button type="button" class="btn btn-light">
-              <i class="fa fa-smile-o" aria-hidden="true"></i>
-              Feeling / Activity
-            </button>
-          </div>
+  <div class="card-header">Create Post</div>
+  <div class="card-body">
+    <!----post-------->
+    <%= form_for(@post, html: {class: "col-xl-12"}) do |f| %>
+      <div class="form-row col-xl-12">
+        <div class="form-group col-xl-3">
+          <div class="user-circle"></div>
         </div>
+        <div class="form-group col-xl-9">
+          <%= f.text_area :post_text, class: 'form-control', id: "exampleFormControlTextarea1", rows:"3" %><br>
+          <% provide(:button_text, 'Submit') %>
+          <%= f.submit yield(:button_text) %>
+        </div>
+      </div>
+    <% end %>
+    <!----post [end]-------->
+  </div>
+  <div class="card-footer">
+    <button type="button" class="btn btn-light">
+      <i class="fa fa-picture-o" aria-hidden="true"></i> Photo / Video
+    </button>
+    <button type="button" class="btn btn-light">
+      <i class="fa fa-users" aria-hidden="true"></i>
+      Tag a Friend
+    </button>
+    <button type="button" class="btn btn-light">
+      <i class="fa fa-smile-o" aria-hidden="true"></i>
+      Feeling / Activity
+    </button>
+  </div>
+</div>
