--- a/test_views/style.css
+++ b/test_views/style.css
@@ -63,6 +63,13 @@ body {
   align-self: center;
 }
 
+.user-circle-xs {
+  height: 40px;
+  width: 40px;
+  border-radius: 50%;
+  background-color: #44619d;
+}
+
 .card {
   margin-top: 10px;
   padding: 0px 0px;
@@ -70,4 +77,42 @@ body {
 
 .comment-row {
   padding: 10px 0px;
+}
+
+/*dropdown menu*/
+.dropdown-menu {
+  width: 440px;
+  left: -395px;
+}
+
+.text-f {
+  margin-bottom: 0px;
+  font-size: small;
+}
+
+.friend-title-con {
+  width: inherit;
+  margin-left: 0px;
+  border-top: 1px solid;
+  border-bottom: 1px solid;
+  border-left: none;
+  border-right: none;
+}
+
+.friend-con {
+  width: inherit;
+  min-height: 60px;
+  background-color: #f5f6f7;
+}
+
+.friend-row {
+  display: flex;
+  align-items: center;
+  min-height: inherit;
+  width: inherit;
+  margin-left: 0px;
+}
+
+.friend-con hr {
+  margin: 0px;
 }
