--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -1,75 +1,123 @@
-
-dy {
-  overflow-x: hidden;
+body {
+    overflow-x: hidden;
 }
+
 .nav-color {
-  background-color: #44619d !important;
-  color: white !important;
+    background-color: #44619d !important;
+    color: white !important;
 }
 
 .nav-brand {
-  color: white !important;
+    color: white !important;
 }
 
 .button-group {
-  padding-top: 33px;
+    padding-top: 33px;
 }
 
 .signUp {
-  padding: 40px 0px;
+    padding: 40px 0px;
 }
 
 .container {
-  background-color: #e9ebee;
+    background-color: #e9ebee;
 }
 
+
 /* Styles for wrapping the search box */
+
 
 /* Bootstrap 4 text input with search icon */
 
 .has-search .form-control {
-  padding-left: 2.375rem;
+    padding-left: 2.375rem;
 }
 
 .has-search .form-control-feedback {
-  position: absolute;
-  z-index: 2;
-  display: block;
-  width: 2.375rem;
-  height: 2.375rem;
-  line-height: 2.375rem;
-  text-align: center;
-  pointer-events: none;
-  color: #aaa;
+    position: absolute;
+    z-index: 2;
+    display: block;
+    width: 2.375rem;
+    height: 2.375rem;
+    line-height: 2.375rem;
+    text-align: center;
+    pointer-events: none;
+    color: #aaa;
 }
 
 .r-con {
-  background-color: #e9ebee !important;
-  height: auto;
-  padding: 10px 0px;
+    background-color: #e9ebee !important;
+    height: auto;
+    padding: 10px 0px;
 }
 
 .user-circle {
-  height: 90px;
-  width: 90px;
-  border-radius: 50%;
-  background-color: #44619d;
+    height: 90px;
+    width: 90px;
+    border-radius: 50%;
+    background-color: #44619d;
 }
 
 .user-circle-sm {
-  height: 60px;
-  width: 60px;
-  border-radius: 50%;
-  background-color: #44619d;
-  align-self: center;
+    height: 60px;
+    width: 60px;
+    border-radius: 50%;
+    background-color: #44619d;
+    align-self: center;
+}
+
+.user-circle-xs {
+    height: 40px;
+    width: 40px;
+    border-radius: 50%;
+    background-color: #44619d;
 }
 
 .card {
-  margin-top: 10px;
-  padding: 0px 0px;
+    margin-top: 10px;
+    padding: 0px 0px;
 }
 
 .comment-row {
-  padding: 10px 0px;
+    padding: 10px 0px;
 }
 
+
+/*dropdown menu*/
+
+.dropdown-menu {
+    width: 440px;
+    left: -395px;
+}
+
+.text-f {
+    margin-bottom: 0px;
+    font-size: small;
+}
+
+.friend-title-con {
+    width: inherit;
+    margin-left: 0px;
+    border-top: 1px solid;
+    border-bottom: 1px solid;
+    border-left: none;
+    border-right: none;
+}
+
+.friend-con {
+    width: inherit;
+    min-height: 60px;
+    background-color: #f5f6f7;
+}
+
+.friend-row {
+    display: flex;
+    align-items: center;
+    min-height: inherit;
+    width: inherit;
+    margin-left: 0px;
+}
+
+.friend-con hr {
+    margin: 0px;
+}
