friend request module 75% finished

--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -40,7 +40,7 @@
             >
         </li>
         <li class="nav-item">
-          <%= link_to('Logout', destroy_user_session_path, class: "nav-link" method: :delete) %> <span class="sr-only">(current)</span>
+          <%= link_to('Logout', destroy_user_session_path, class: "nav-link", method: :delete) %> <span class="sr-only">(current)</span>
         </li>
         <li class="nav-item dropdown">
           <a
