--- a/app/views/layouts/devise.html.erb
+++ b/app/views/layouts/devise.html.erb
@@ -18,8 +18,9 @@
         <%= render 'layouts/shim' %>
       </head>
       <body>
+        <!----nav---->
         <nav class="navbar navbar-expand-lg navbar-light bg-light nav-color">
-          <a class="navbar-brand" href="#">Navbar</a>
+          <a class="navbar-brand" href="/">Facebook</a>
           <button
         class="navbar-toggler"
         type="button"
@@ -37,6 +38,7 @@
             <!------login [END]-------------->
           </div>
         </nav>
+        <!----nav---->
         <div class="container">
           <div class="d-flex justify-content-end row">
             <%= yield %>
