--- a/app/views/layouts/_left_sidemenu.html.erb
+++ b/app/views/layouts/_left_sidemenu.html.erb
@@ -1,24 +1,24 @@
- <ul class="nav flex-column">
-              <li class="nav-item">
-                <a class="nav-link" href="#">
-                  <i class="fa fa-user-circle" aria-hidden="true"></i>
-                  Username</a
+<ul class="nav flex-column">
+  <li class="nav-item">
+    <a class="nav-link" href="#">
+      <i class="fa fa-user-circle" aria-hidden="true"></i>
+      <%= @logged_user.name.upcase%></a
             >
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">
-                  <i class="fa fa-comments" aria-hidden="true"></i>
-                  Messaging</a
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="/friendships/your_friends">
+      <i class="fa fa-users" aria-hidden="true"></i>
+      Frienships</a
             >
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">
-                  <i class="fa fa-video-camera" aria-hidden="true"></i>
-                  Watch</a
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="#">
+      <i class="fa fa-video-camera" aria-hidden="true"></i>
+      Watch</a
             >
-              </li>
-              <h6 class="ml-4">Shortcuts</h6>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
-              </li>
-            </ul>
+  </li>
+  <h6 class="ml-4">Shortcuts</h6>
+  <li class="nav-item">
+    <a class="nav-link" href="#">Link</a>
+  </li>
+</ul>
