--- a/app/views/friendships/index.html.erb
+++ b/app/views/friendships/index.html.erb
@@ -20,7 +20,7 @@
       <% i = i + 1%>
       <div class="row friend-row">
         <div class="col-xl-2 ">
-          <div class="user-circle-xs"></div>
+          <div class="user-circle-xs"> <%= gravatar_for u %> </div>
         </div>
         <div class="col-xl-4 ">
           <%=u.name %>
