--- a/app/views/layouts/_posting_block.html.erb
+++ b/app/views/layouts/_posting_block.html.erb
@@ -5,10 +5,10 @@
     <%= form_for(@post, html: {class: "col-xl-12"}) do |f| %>
       <div class="form-row col-xl-12">
         <div class="form-group col-xl-3">
-          <div class="user-circle"></div>
+          <div class="user-circle"> <%= gravatar_for @logged_user %></div>
         </div>
         <div class="form-group col-xl-9">
-          <%= f.text_area :post_text, class: 'form-control', id: "exampleFormControlTextarea1", rows:"3" %><br>
+          <%= f.text_area :post_text, class: 'form-control', id: "exampleFormControlTextarea1", rows:"3", placeholder: "Add new post" %><br>
           <% provide(:button_text, 'Submit') %>
           <%= f.submit yield(:button_text) %>
         </div>
